syntax = "proto3";
option go_package = "github.com/edaniels/gostream/proto/stream/v1";

package proto.stream.v1;

// A StreamService is used to coordinate with a WebRTC the listing,
// addition, and removal of registered video streams.
// TODO(https://github.com/viamrobotics/rdk/issues/509): support removal
service StreamService {
	// ListStreams returns all streams registered.
	rpc ListStreams(ListStreamsRequest) returns (ListStreamsResponse);

	// AddStream requests a particular stream be added.
	rpc AddStream(AddStreamRequest) returns (AddStreamResponse);
}

// ListStreamsRequest requests all streams registered.
message ListStreamsRequest {}

// A ListStreamsResponse details streams registered.
message ListStreamsResponse {
	repeated string names = 1;
}

// A AddStreamRequest requests the given stream be added to the connection.
message AddStreamRequest {
	string name = 1;
}

// AddStreamResponse is returned after a successful AddStreamRequest.
message AddStreamResponse {}

